# fastapi-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  fasthtml-docs-reference.txt  package-lock.json  undeploy.sh
.cursor/plans/: backend_modular_reorganization_07025f9c.plan.md
.github/workflows/: build.yaml
backend/: Dockerfile  TEMPLATE_MIGRATION.md  auth.py  cleanup.py  config.py  database.py  deployment.py  health_checks.py  lifespan.py  log_parser.py  main.py  migrate_admin_role.py  migrate_mongo_users.py  migrate_templates.py  models.py  mongo_users.py  requirements.txt  seed_templates.py  utils.py  validation.py
backend/background/: __init__.py  cleanup.py  (+3 more)
cli/: .fp.yaml  app.py  pyproject.toml
cli-go/: README.md  go.mod  go.sum  main.go
cli/src/fp_cli/: config.py  main.py  project.py  validation.py
cli/src/fp_cli/api/: client.py
cli/src/fp_cli/commands/: apps.py  auth.py  deploy.py  dev.py  init.py  logs.py  pull.py  push.py  validate.py
deploy/: README.md
docs/: CLAUDE_INTEGRATION.md  DEPLOYMENT.md  FUNCTION_MODE_DEEP_DIVE.md  LOCAL_DEV_CLUSTER.md  MULTI_DATABASE_ARCHITECTURE.md  PLATFORM_CONTRACT.md  ROADMAP.md  serverless-pivot-exploration.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend-ideas/: README.md  index.html  package-lock.json  package.json
marketing-page/: index.html  script.js  styles.css
n8n-workflows/: chat-workflow.json
runner/: Dockerfile  entrypoint.py  runner.py
scripts/: n8n-helper.sh  regression_test.py
tools/: mongo-template-helpers.sh  template_manager.py
(+206 files in other folders)
